--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
 theme: jekyll-theme-minimal
 logo: https://avatars.githubusercontent.com/u/57609353
 description: Hi!  I'm a computer engineering student at UPenn interested in robotics and service.
+gems: 
+  - jemoji
