--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@svgr/webpack": "^7.0.0",
     "@tailwindcss/typography": "^0.5.9",
     "autoprefixer": "^10.4.14",
+    "eslint-config-prettier": "^8.8.0",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7"
   }
